fix: dark mode not working when the browser is set to it

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,3 @@
 :root {
-	color-scheme: light-dark;
+	color-scheme: light dark;
 }
